Fix history page formatting on mobile

--- a/peanut/static/smskeeper/style/style.css
+++ b/peanut/static/smskeeper/style/style.css
@@ -13,14 +13,13 @@
 	clear:both;
 	margin: 8px 8px;
   overflow: hidden;
-  display: table;
+  display: block;
 }
 
 .body
 {
   padding: 1pt 4px;
   border-radius: 4px;
-  white-space: pre;
 }
 
 .messageHeader
@@ -165,11 +164,10 @@
 
 /* base styles */
 
-
 body {
   background: #fff;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 15px;
+  font-size: 12pt;
   line-height: 1.7;
   margin: 0;
 }
